fix: fix some styles, add alignment for loader

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -34,6 +34,9 @@
 
 .userStatistics {
   grid-area: user-statistics;
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 8px;
   font-size: 30px;
   color: $colorWhite;
   @media (--max-tablet) {
