--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,15 +13,15 @@ body::before {
   background-size: cover;
 }
 
-#root {
+[id='root'] {
   display: grid;
   grid-template-rows: max-content 1fr;
   height: 100%;
-  padding: 40px;
 }
 
 .wrapper {
+  --horizontalSpacing: 20px;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
+  padding: var(--horizontalSpacing);
 }
